# LRain_FSM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: main.c
include/: FSM_conf.h  LRain_FSM.h
src/: LRain_FSM.c  port.c
tests/: CMakeLists.txt  test1.c
